# Talis

./: .gitignore  LICENSE  README.md  build.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  recommendationsModel.ipynb  render.yaml  requirements-macos.txt  requirements.txt
.github/workflows/: autoDeploy.yml  backend-tests.yml  buildAndDeploy.yml  buildFrontend.yml  frontend-format-check.yml  frontend-lint-check.yml  frontend-tests.yml  python-tests.yml
app/: admin.py  models.py  urls.py  views.py
app/controllers/: BoardGameController.py  CategoryController.py  CollectionController.py  CommentsRatingsController.py  EventController.py  FriendListController.py  GameAddController.py  InviteController.py  RegistrationController.py  SearchController.py  SettingsController.py  UserController.py  UserProfileController.py
app/migrations/: 0001_initial.py  0002_boardgame_delete_animal.py  0003_alter_boardgame_image_url_alter_boardgame_name_and_more.py  0004_boardgame_created_at_boardgame_modified_at.py  0005_boardgame_rating.py  0006_category_mechanic_publisher_and_more.py  0007_alter_boardgameexpansion_expansion_board_game.py  0008_registereduser.py  0008_remove_boardgame_category_remove_boardgame_expansion_and_more.py  0009_remove_boardgame_publisher.py  0010_merge_20240724_1758.py  0016_logerror.py  (+23 more)
backend/: settings.py  urls.py
frontend/: .babelrc  .eslintrc  .gitignore  babel.config.js  package-lock.json  package.json
ml_model/: recommendation_model.sav
server/: settings.py
talis/: asgi.py  settings.py  urls.py  wsgi.py
(+280 files in other folders)
